--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,15 @@
 .App {
   text-align: center;
+  background-color:#FADCD9  ;
+  width: 100%;
+  height:720px ;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
+  background-color:#FADCD9  ;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +23,10 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@font-face {
+  font-family: "Licorice";
+  src: local("Licorice"),
+   url("./Fonts/Licorice/Licorice-Regular.ttf") format("truetype");
+  
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
